# SwiftV2

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json
Examples/: CMakeLists.txt
Examples/Common/: CMakeLists.txt
Examples/Common/Include/: Image.hpp
Examples/Common/Source/: Image.cpp
Examples/Resources/: SkyboxLut.dds
Examples/Scripts/: functions.cmake
Examples/Shaders/: triangle.frag
Examples/Showcase/: CMakeLists.txt
Examples/Showcase/Include/: Utility.hpp
Examples/Showcase/Source/: main.cpp
Include/: Swift.hpp  SwiftEnums.hpp  SwiftInternal.hpp  SwiftStructs.hpp
Source/: Swift.cpp
Source/Vulkan/: VulkanConstants.hpp  VulkanInit.hpp  VulkanInit.inl  VulkanRender.hpp  VulkanUtil.hpp  VulkanUtil.inl
